// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli accept help for subcommand 1`] = `
"
  Description

  Custom subcommand help
"
`;

exports[`cli basic 1`] = `
"
  Description

  Usage
    foo <input>
"
`;

exports[`cli basic 2`] = `
Array [
  Array [
    "
[33m[39m
[33m   ╭───────────────────────────────────────────────────────╮[39m
   [33m│[39m                                                       [33m│[39m
   [33m│[39m            Update available [2m0.0.1[22m[0m → [0m[32m0.3.0[39m             [33m│[39m
   [33m│[39m   Run [36myarn add @quase/eslint-config-quase[39m to update   [33m│[39m
   [33m│[39m                                                       [33m│[39m
[33m   ╰───────────────────────────────────────────────────────╯[39m
[33m[39m",
  ],
]
`;

exports[`cli generate help 1`] = `
"
  Description

  Usage: $ bin something

  Options:
    --number, -n, -n2 number description (default: 0) [number]
    --unicorn, -u     unicorn description [string?]
    --meow            (default: \\"dog\\") [string]
    --boolean         boolean description (default: false) [boolean]
    --boolean-no      boolean no description (default: true) [boolean]
    --object.prop     [string?]
    --object          [object]
    --tuple           [[string?]]
    --array           array of strings [array]
    --union           union (default: \\"\\") [string? | number | [string]]
    --choices         choices (default: 0) [number | number | number]
    --camel-case      description [string?]
"
`;

exports[`cli generate help for subcommand 1`] = `
"
  Description

  Usage: $ bin fooCommand [options]

  foo command description

  Options:
    --number, -n, -n2 number description (default: 0) [number]
    --unicorn, -u     unicorn description [string?]
    --boolean         boolean description (default: true) [boolean]
"
`;

exports[`cli generate help with subcommands 1`] = `
"
  Description

  Usage: $ bin <command> [options]

  Commands:
    foo-command    foo command description
    no-description

  Options:
    --unicorn, -u unicorn description [string?]
"
`;

exports[`cli generate help with subcommands including options of default command 1`] = `
"
  Description

  Usage: $ bin <command> [options]

  Commands:
    foo-command foo command description [default]

  Options:
    --number, -n, -n2 number description (default: 0) [number]
"
`;
